--- a/mysite/templates/portfolio/base.html
+++ b/mysite/templates/portfolio/base.html
@@ -38,7 +38,7 @@
                         </ul>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="#">Resume</a>
+                        <a class="nav-link" href="{% static 'media/philonglai-resume.pdf' %}">Resume</a>
                       </li>
                       <li class="nav-item">
                         <a class="nav-link" href="https://www.linkedin.com/in/long-lai-454877180/">LinkedIn</a>
