modify for viewport compatibility

--- a/templates/portfolio/base.html
+++ b/templates/portfolio/base.html
@@ -59,35 +59,35 @@
     <footer class="text-bg-footer pt-2">
       <div class="container text-center">
         <div class="row text-center">
-          <div class="col-sm-3 mx-auto mt-3">
+          <div class="col-3 mx-auto mt-3">
             <h5 class="text-uppercase font-weight-bold">Phone</h5>
             <p>
               <i class="fa-solid fa-phone"></i>
               <span>: (+1) 780 695-6610</span>
             </p>
           </div>
-          <div class="col-sm-3 mx-auto mt-3">
+          <div class="col-3 mx-auto mt-3">
             <h5 class="text-uppercase font-weight-bold">Email</h5>
             <p>
               <i class="fa-solid fa-envelope"></i>
               <span>: llai1@ualberta.ca</span>
             </p>
           </div>
-          <div class="col-sm-3 mx-auto mt-3">
+          <div class="col-3 mx-auto mt-3">
             <h5 class="text-uppercase font-weight-bold">Follow Me</h5>
             <div class="list-unstyled list-inline">
-              <a class="list-inline-item btn-floating btn-sm" style="font-size: 18px;" href="https://www.linkedin.com/in/long-lai-454877180/">
+              <a class="list-inline-item btn-floating" style="font-size: 18px;" href="https://www.linkedin.com/in/long-lai-454877180/">
                 <i class="fa-brands fa-linkedin-in"></i>
               </a>
-              <a class="list-inline-item btn-floating btn-sm" style="font-size: 18px;" href="https://github.com/lpl-5664">
+              <a class="list-inline-item btn-floating" style="font-size: 18px;" href="https://github.com/lpl-5664">
                 <i class="fa-brands fa-github"></i>
               </a>
-              <a class="list-inline-item btn-floating btn-sm" style="font-size: 18px;" href="https://www.kaggle.com/philonglai">
+              <a class="list-inline-item btn-floating" style="font-size: 18px;" href="https://www.kaggle.com/philonglai">
                 <i class="fa-brands fa-kaggle"></i>
               </a>
             </div>
           </div>
-          <div class="col-sm-3 mx-auto mt-3">
+          <div class="col-3 mx-auto mt-3">
             <span>&copy 2024 All Rights Reserved by Phi Long Lai</span>
           </div>
         </div>
