--- a/static/portfolio/styles.css
+++ b/static/portfolio/styles.css
@@ -32,7 +32,7 @@ body {
 .photo img {
     border-radius: 50%;
     object-fit: cover;
-    height: 250px;
+    /* height: 250px; */
 }
 
 #animatedText {
@@ -44,19 +44,19 @@ body {
     color: white;
 }
 
-.icons {
+/* .icons {
     padding: 20px;
-}
+} */
 
-.icons i{
+/* .icons i{
     font-size: 100px;
-}
+} */
 
 .desc p {
     color: black;
     text-align: center;
     padding: 15px;
-    font-size: 20px;
+    font-size: 18px;
     background-color: white;
     border-radius: 30px 0;
 }
