--- a/templates/portfolio/base.html
+++ b/templates/portfolio/base.html
@@ -57,23 +57,23 @@
     </main>
     
     <footer class="text-bg-footer pt-2">
-      <div class="container text-center">
-        <div class="row text-center">
-          <div class="col-3 mx-auto mt-3">
+      <div class="container text-start">
+        <div class="row text-start">
+          <div class="col-auto mx-auto mt-3">
             <h5 class="text-uppercase font-weight-bold">Phone</h5>
             <p>
               <i class="fa-solid fa-phone"></i>
               <span>: (+1) 780 695-6610</span>
             </p>
           </div>
-          <div class="col-3 mx-auto mt-3">
+          <div class="col-auto mx-auto mt-3">
             <h5 class="text-uppercase font-weight-bold">Email</h5>
             <p>
               <i class="fa-solid fa-envelope"></i>
               <span>: llai1@ualberta.ca</span>
             </p>
           </div>
-          <div class="col-3 mx-auto mt-3">
+          <div class="col-auto mx-auto mt-3">
             <h5 class="text-uppercase font-weight-bold">Follow Me</h5>
             <div class="list-unstyled list-inline">
               <a class="list-inline-item btn-floating" style="font-size: 18px;" href="https://www.linkedin.com/in/long-lai-454877180/">
@@ -87,7 +87,7 @@
               </a>
             </div>
           </div>
-          <div class="col-3 mx-auto mt-3">
+          <div class="col-auto mx-auto mt-3 align-self-center">
             <span>&copy 2024 All Rights Reserved by Phi Long Lai</span>
           </div>
         </div>
