--- a/templates/portfolio/home.html
+++ b/templates/portfolio/home.html
@@ -3,7 +3,7 @@
 {% block content %}
     <div class="vh-100 d-flex flex-column align-items-center justify-content-center">
         <div class="photo mb-5">
-            <img src="{% static 'media/main-avatar.JPG' %}" alt="{% static 'media/backup-avatar.jpg' %}">
+            <img class="img-fluid" src="{% static 'media/main-avatar.JPG' %}" alt="{% static 'media/backup-avatar.jpg' %}">
         </div>
         <div class="animation">
             <h2>Hello, my name is Phi Long Lai. I am a <span id="animatedText"></span>.</h2>
@@ -15,14 +15,14 @@
         </div>
         <a class="btn btn-outline-light btn-lg" role="button" tabindex="0" href="mailto:llai1@ualberta.ca">SAY HELLO</a>
     </div>
-    <div class="about vh-100 d-flex flex-column justify-content-center align-items-center">
+    <div class="about min-vh-100 d-flex flex-column justify-content-center align-items-center">
         <h1 class="pt-5">About Me</h1>
 
         <div class="d-flex flex-row mt-5 mb-5">
-            <div class="icons align-self-center">
-                <i class="fa-solid fa-graduation-cap"></i>
+            <div class="align-self-center mw-25 p-3">
+                <i class="fa-solid fa-graduation-cap fa-4x"></i>
             </div>
-            <div class="desc col-6">
+            <div class="desc col-8 p-2">
                 <p>I am a new gradute from the University of Alberta with a strong passion for programming. 
                     I have an inquisitive nature and I am adept at learning cutting-edge technologies. 
                     I can teach myself necessary skills and work independently but I am also a team player and 
@@ -32,16 +32,16 @@
         </div>
     
         <div class="d-flex flex-row-reverse mt-5">
-            <div class="icons align-self-center">
-                <i class="fa-solid fa-magnifying-glass"></i>
+            <div class="align-self-center p-2">
+                <i class="fa-solid fa-magnifying-glass fa-4x"></i>
             </div>
-            <div class="desc col-6 shadow-lg">
-                <p><span style="font-size: 23px; font-weight: bold; color: blue;">#OpenToWork #SeekingOpportunities</span> <br>I am currently looking for full-time opportunities in Canada. Please reach out to me 
+            <div class="desc col-8 p-2">
+                <p><span style="font-size: 20px; font-weight: bold; color: blue;">#OpenToWork #SeekingOpportunities</span> <br>I am currently looking for full-time opportunities in Canada. Please reach out to me 
                     if you have any open positions that you think I would be a good fit.</p>
             </div>
         </div>
     </div>
-    <div class="skills vh-100 d-flex flex-column justify-content-center align-items-center">
+    <div class="skills min-vh-100 d-flex flex-column justify-content-center align-items-center">
         <h1>Technical Skills</h1>
 
         <div id="skillsCarousel" class="carousel slide carousel-fade w-100 h-50 mt-5" data-bs-ride="carousel">
