--- a/templates/portfolio/home.html
+++ b/templates/portfolio/home.html
@@ -36,7 +36,7 @@
                 <i class="fa-solid fa-magnifying-glass fa-4x"></i>
             </div>
             <div class="desc col-8 p-2">
-                <p><span style="font-size: 20px; font-weight: bold; color: blue;">#OpenToWork #SeekingOpportunities</span> <br>I am currently looking for full-time opportunities in Canada. Please reach out to me 
+                <p><span style="font-size: 20px; font-weight: bold; color: blue;">#OpenToWork <br> #Seeking Opportunities</span> <br>I am currently looking for full-time opportunities in Canada. Please reach out to me 
                     if you have any open positions that you think I would be a good fit.</p>
             </div>
         </div>
@@ -45,11 +45,11 @@
         <h1>Technical Skills</h1>
 
         <div id="skillsCarousel" class="carousel slide carousel-fade w-100 h-50 mt-5" data-bs-ride="carousel">
-            <div class="carousel-indicators">
+            <!-- <div class="carousel-indicators">
                 <button type="button" data-bs-target="#skillsCarousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Programming Languages"></button>
                 <button type="button" data-bs-target="#skillsCarousel" data-bs-slide-to="1" aria-label="Web Frameworks"></button>
                 <button type="button" data-bs-target="#skillsCarousel" data-bs-slide-to="2" aria-label="Machine Learning Libraries"></button>
-            </div>
+            </div> -->
             <div class="carousel-inner">
                 <div class="carousel-item active">
                     <!-- <img src="..." class="d-block w-100" alt="..."> -->
