--- a/static/portfolio/styles.css
+++ b/static/portfolio/styles.css
@@ -32,7 +32,8 @@ body {
 .photo img {
     border-radius: 50%;
     object-fit: cover;
-    /* height: 250px; */
+    max-height: 250px; 
+    max-width: 250px;
 }
 
 #animatedText {
