--- a/templates/portfolio/base.html
+++ b/templates/portfolio/base.html
@@ -10,6 +10,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" 
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="{% static 'portfolio/styles.css' %}">
+    <link rel="shortcut icon" type="image/" href="{% static 'favicon_io/favicon.ico'%}">
 </head>
 <body>
     <header class="site-header">
