Added projects dropdown menu

--- a/templates/portfolio/base.html
+++ b/templates/portfolio/base.html
@@ -28,14 +28,30 @@
                         <a class="nav-link active" aria-current="page" href="{% url 'home' %}">Home</a>
                       </li>
                       <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle disabled" href="{% url 'projects' %}" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        <a class="nav-link dropdown-toggle" href="{% url 'projects' %}" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                           Projects
                         </a>
                         <ul class="dropdown-menu">
-                          <li><a class="dropdown-item" href="#">Action</a></li>
-                          <li><a class="dropdown-item" href="#">Another action</a></li>
-                          <li><hr class="dropdown-divider"></li>
-                          <li><a class="dropdown-item" href="#">Something else here</a></li>
+                          <li>
+                            <a class="dropdown-item" href="https://github.com/lpl-5664/DeepSORT-tracking">
+                              DeepSORT Tracking
+                            </a>
+                          </li>
+                          <li>
+                            <a class="dropdown-item" href="https://black-plant-0cb93ad0f.5.azurestaticapps.net">
+                              Language Translation Web App
+                            </a>
+                          </li>
+                          <li>
+                            <a class="dropdown-item disabled" href="#">
+                              Transformer for Language Translation
+                            </a>
+                          </li>
+                          <li>
+                            <a class="dropdown-item" href="https://github.com/CMPUT301F20T32/BookIt">
+                              BookIt Mobile App
+                            </a>
+                          </li>
                         </ul>
                       </li>
                       <li class="nav-item">
